--- a/src/components/CourseGoals/CourseInput/CourseInput.module.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.module.css
@@ -22,3 +22,11 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input{
+  border-color: red;
+  background-color: rgb(245, 195, 195);
+}
+.form-control.invalid label{
+  color: red;
+}
